--- a/src/main/res/layout/list_item_article.xml
+++ b/src/main/res/layout/list_item_article.xml
@@ -1,27 +1,20 @@
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?selectableItemBackground">
+    android:layout_height="wrap_content">
+
+    <!--suppress AndroidLintContentDescription -->
+    <com.example.xyzreader.ui.DynamicHeightNetworkImageView
+        android:id="@+id/thumbnail"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/photo_placeholder" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <!--suppress AndroidLintContentDescription -->
-        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
-            android:id="@+id/thumbnail"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/photo_placeholder" />
-
+        android:orientation="vertical"
+        android:layout_gravity="bottom"
+        android:background="#80000000">
         <TextView
             android:id="@+id/article_title"
             style="@style/TextAppearance.AppCompat.Subhead"
@@ -31,7 +24,8 @@
             android:paddingTop="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
-            android:textColor="@color/ltgray"
+            android:textSize="20sp"
+            android:textColor="@android:color/white"
             android:ellipsize="end"
             android:maxLines="4" />
 
@@ -43,10 +37,11 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="16dp"
-            android:textColor="#6000"
+            android:textSize="12sp"
+            android:textColor="@android:color/white"
             android:maxLines="1"
             android:singleLine="true"
             android:ellipsize="end" />
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</FrameLayout>
