Start applying a Material color theme

--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -18,8 +18,12 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="blue_grey_500">#607d8b</color>
+    <color name="blue_grey_700">#455a64</color>
+    <color name="red_a200">#ff5252</color>
+
+    <color name="theme_primary">@color/blue_grey_500</color>
+    <color name="theme_primary_dark">@color/blue_grey_700</color>
+    <color name="theme_accent">@color/red_a200</color>
     <color name="ltgray">#ffe0e0e0</color>
 </resources>
