--- a/src/main/res/layout/fragment_article_detail.xml
+++ b/src/main/res/layout/fragment_article_detail.xml
@@ -84,9 +84,8 @@
                     android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                     android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                     android:paddingBottom="@dimen/detail_body_bottom_margin"
-                    android:textColor="?colorPrimaryDark"
-                    android:textColorLink="@color/theme_accent"
-                    android:textSize="@dimen/detail_body_text_size"
+                    android:textColor="?attr/colorPrimaryDark"
+                    android:textColorLink="?attr/colorAccent"
                     android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
 
             </com.example.xyzreader.ui.MaxWidthLinearLayout>
